--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Zach
-middle_name: R.
-last_name: z
-email: you@example.com
+first_name: Zheliang
+middle_name:
+last_name: Zhu (Zach)
+email: zhu.zheliang@wustl.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
