--- a/_config.yml
+++ b/_config.yml
@@ -321,3 +321,6 @@ popper:
 medium_zoom:
   version: "1.0.6"
   integrity: "sha256-EdPgYcPk/IIrw7FYeuJQexva49pVRZNmt3LculEr7zM="
+
+
+excerpt_separator: <!-- excerpt-end -->
