--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -31,4 +31,4 @@
 - title: Reasearch Interests
   type: list
   contents:
-    - Macroeconomics, Environmental Economics, Information Frictions
+    - Macroeconomics and Monetary Policy, Environmental Economics, Information Frictions
