--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,5 +1,8 @@
 
 
-"Tan"
+"Tan":
 - firstname: ["Fei","F."]
-  url: https://https://econdojo.github.io/
+  url: https://econdojo.github.io/
+
+"Lyu":
+- firstname: ["Leifei","L."]
