--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -6,3 +6,7 @@
 
 "Lyu":
 - firstname: ["Leifei","L."]
+
+"Fan":
+- firstname: ["Yunpeng","Y."]
+  url: http://ifb.cass.cn/newpc/yjtd/jrfx/202110/t20211029_5370656.shtml
