--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -13,7 +13,7 @@
   contents:
     - title: Ph.D. in Economics
       institution: Washington University in St.Louis, MO, The United States
-      year: 2023(Expected)
+      year: 2023
       #description:
       #  - Description 1.
       #  - Description 2.
